@@ -1,4 +1,4 @@
-$Id: History,v 1.82 2000-05-28 13:59:32 barrand Exp $
+$Id: History,v 1.83 2000-05-29 09:59:11 johna Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -23,6 +23,9 @@ committal in the CVS repository !
 
 History file for visualization category
 ---------------------------------------
+
+20th May 2000  John Allison
+- Bug fix in G4PhysicalVolumeModel for replicas (Guy Barrand).
 
 26 May 2000  Guy Barrand
 - management/src/G4VisCommandsScene.
